# civica

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/postgres/init/: 01-create-test-db.sql
docs/: mvp-overview.md  procedures-for-acquiring-french-nationality.md  project-plan-2026-07-11-A.md
src/civica/db/: migrate.py  pool.py  schema.sql
src/civica/domain/: themes.py
src/civica/scripts/: capture_thematic_sheets.py  migrate.py  normalize_thematic_sheets.py  verify_corpus_coverage.py
tests/: conftest.py  test_typecheck.py  test_unused_imports.py
tests/db/: test_pool.py
tests/fixtures/html/: fiche_sample_alpha.html  fiche_sample_alpha_v2.html  fiche_sample_beta.html  fiche_with_unlisted_link.html  normalize_leaf_page.expected.json  normalize_leaf_page.html  normalize_listing_page.html  thematic_index.html  thematic_sitemap.xml
tests/integration/: conftest.py
tests/integration/db/: test_migrate.py
tests/integration/scripts/: test_capture_thematic_sheets_external.py
tests/unit/: test_typecheck.py  test_unused_imports.py
tests/unit/domain/: test_themes.py
tests/unit/scripts/: test_capture_thematic_sheets.py  test_normalize_thematic_sheets.py  test_verify_corpus_coverage.py
