[project]
name = "civica"
version = "0.1.0"
description = "Memory-aware LLM agent; Learning coach for the French naturalisation civics exam."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "pgvector>=0.5.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-m 'not external'"
markers = [
    "external: tests that hit real external services (network, real DB clusters, etc.)",
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
